# lingua-rs

./: .gitignore  .travis.yml  ACCURACY_PLOTS.md  ACCURACY_TABLE.md  CONTRIBUTING.md  Cargo.toml  README.md  README_PYPI.md  RELEASE_NOTES.md  lingua.pyi  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  lingua-ci.yml  lingua-release.yml  missing-python-release.yml  python-build.yml  python-release.yml  release.yml  rust-build.yml  rust-release.yml
accuracy-reports/: aggregated-accuracy-values.csv  average-accuracy-values.csv  sentences-accuracy-values.csv  single-words-accuracy-values.csv  word-pairs-accuracy-values.csv
accuracy-reports/cld2/: Afrikaans.txt  Albanian.txt  Amharic.txt  Arabic.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bengali.txt  Bosnian.txt  Bulgarian.txt  Burmese.txt  Catalan.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  Ganda.txt  Georgian.txt  German.txt  Greek.txt  Gujarati.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Japanese.txt  Kazakh.txt  Khmer.txt  Korean.txt  Kyrgyz.txt  Lao.txt  Latin.txt  (+44 more)
accuracy-reports/lingua/: Afrikaans.txt  Albanian.txt  Arabic.txt  Armenian.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bengali.txt  Bokmal.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  Ganda.txt  Georgian.txt  German.txt  Greek.txt  Gujarati.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Japanese.txt  Kazakh.txt  Korean.txt  Latin.txt  Latvian.txt  Lithuanian.txt  (+35 more)
accuracy-reports/lingua-high-accuracy/: Afrikaans.txt  Albanian.txt  Amharic.txt  Arabic.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bengali.txt  Bokmal.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Chechen.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  Ganda.txt  Georgian.txt  German.txt  Greek.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Kazakh.txt  Kyrgyz.txt  Latin.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  (+42 more)
accuracy-reports/lingua-low-accuracy/: Afrikaans.txt  Albanian.txt  Arabic.txt  Armenian.txt  Azerbaijani.txt  Basque.txt  Belarusian.txt  Bokmal.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  Chechen.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  Ganda.txt  Georgian.txt  German.txt  Greek.txt  Gujarati.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Icelandic.txt  Indonesian.txt  Irish.txt  Italian.txt  Kazakh.txt  Korean.txt  Kyrgyz.txt  Latin.txt  Latvian.txt  Lithuanian.txt  (+42 more)
accuracy-reports/lingua-swedish-detector/: German.txt
accuracy-reports/lingua-venetian-detector/: Venetian.txt
accuracy-reports/whatlang/: Afrikaans.txt  Arabic.txt  Azerbaijani.txt  Belarusian.txt  Bengali.txt  Bokmal.txt  Bulgarian.txt  Catalan.txt  Chinese.txt  Croatian.txt  Czech.txt  Danish.txt  Dutch.txt  English.txt  Esperanto.txt  Estonian.txt  Finnish.txt  French.txt  German.txt  Greek.txt  Gujarati.txt  Hebrew.txt  Hindi.txt  Hungarian.txt  Indonesian.txt  Italian.txt  Japanese.txt  Korean.txt  Latin.txt  Latvian.txt  Lithuanian.txt  Macedonian.txt  Marathi.txt  Nynorsk.txt  Persian.txt  Polish.txt  Portuguese.txt  Punjabi.txt  Romanian.txt  Russian.txt  (+15 more)
accuracy-reports/whichlang/: Arabic.txt  Chinese.txt  Dutch.txt  English.txt  French.txt  German.txt  Italian.txt  Japanese.txt  Korean.txt  Portuguese.txt  Russian.txt  Spanish.txt  Swedish.txt  Turkish.txt  Vietnamese.txt
benches/: benchmark.rs
common/: Cargo.toml
common/src/: fraction.rs  lib.rs  ngram.rs
examples/: accuracy_reports.rs  regen_testdata.rs  regen_unique_ngrams.rs  regen_venetian.rs  usage.rs
language-models/af/: Cargo.toml  README.md
language-models/am/: Cargo.toml
language-models/ar/: Cargo.toml  README.md
language-models/ce/: Cargo.toml
language-models/ce/models/: bigrams.json.br  fivegrams.json.br  quadrigrams.json.br  trigrams.json.br  unigrams.json.br
language-models/ce/src/: lib.rs
language-models/ce/testdata/: sentences.txt  single-words.txt  word-pairs.txt
language-models/ml/: Cargo.toml
language-models/ml/models/: bigrams.json.br  fivegrams.json.br  quadrigrams.json.br  trigrams.json.br  unigrams.json.br
language-models/ml/src/: lib.rs
language-models/ml/testdata/: sentences.txt  single-words.txt  word-pairs.txt
language-models/my/: Cargo.toml
language-models/my/models/: bigrams.json.br  fivegrams.json.br  quadrigrams.json.br  trigrams.json.br  unigrams.json.br
language-models/my/src/: lib.rs
language-models/my/testdata/: sentences.txt  single-words.txt  word-pairs.txt
language-models/sd/: Cargo.toml
language-models/sd/models/: bigrams.json.br  fivegrams.json.br  quadrigrams.json.br  trigrams.json.br  unigrams.json.br
language-models/sd/src/: lib.rs
language-models/sd/testdata/: sentences.txt  single-words.txt  word-pairs.txt
language-models/sq/: Cargo.toml  README.md
language-models/sq/models/: low-accuracy-model.fst  mostcommon-ngrams.fst  ngrams.fst  unique-ngrams.fst
language-models/sq/src/: lib.rs
language-models/uz/: Cargo.toml
language-models/uz/models/: bigrams.json.br  fivegrams.json.br  quadrigrams.json.br  trigrams.json.br  unigrams.json.br
language-models/uz/src/: lib.rs
language-models/uz/testdata/: sentences.txt  single-words.txt  word-pairs.txt
model-builder/: Cargo.toml
scripts/: build_venetian_corpus.py
src/: alphabet.rs  builder.rs  constant.rs  detector.rs  file.rs  fraction.rs  isocode.rs  json.rs  language.rs  lib.rs  macros.rs  model.rs  ngram.rs  python.rs  result.rs  script.rs  wasm.rs  writer.rs
tables/: AVERAGE_ACCURACY_TABLE.md  SENTENCES_ACCURACY_TABLE.md  SINGLE_WORDS_ACCURACY_TABLE.md  WORD_PAIRS_ACCURACY_TABLE.md
tests/: node.rs  web.rs
(+946 files in other folders)
