# Copyright © 2020 Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "lingua"
version = "1.0.0"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
description = """
An accurate natural language detection library, suitable for long and short text alike
"""
homepage = "https://github.com/pemistahl/lingua-rs"
repository = "https://github.com/pemistahl/lingua-rs"
documentation = "https://docs.rs/lingua"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
categories = ["text-processing"]
keywords = [
    "language-processing",
    "language-detection",
    "language-recognition",
    "nlp"
]
exclude = ["/accuracy-reports", "/images"]

[dependencies]
cfg-if = "0.1.10"
fraction = { version = "0.6.3", default-features = false }
include_dir = "0.6.0"
itertools = "0.9.0"
maplit = "1.0.2"
once_cell = "1.5.2"
regex = "1.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
strum = "0.19.5"
strum_macros = "0.19.4"
zip = "0.5.8"

[dev-dependencies]
float-cmp = "0.8.0"
indoc = "1.0.3"
mockall = "0.8.3"
rstest = "0.6.4"
tempfile = "3.1.0"
titlecase = "1.1.0"
whatlang = "0.11.0"