# Copyright © 2020 Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["language-models/*"]

[package]
name = "lingua"
version = "1.0.0"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
description = """
An accurate natural language detection library, suitable for long and short text alike
"""
homepage = "https://github.com/pemistahl/lingua-rs"
repository = "https://github.com/pemistahl/lingua-rs"
documentation = "https://docs.rs/lingua"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
categories = ["text-processing"]
keywords = [
    "language-processing",
    "language-detection",
    "language-recognition",
    "nlp"
]

[dependencies]
cfg-if = "0.1.10"
fraction = "0.6.3"
include_dir = "0.6.0"
itertools = "0.9.0"
maplit = "1.0.2"
once_cell = "1.5.2"
regex = "1.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
strum = "0.19.5"
strum_macros = "0.19.4"
zip = "0.5.8"
lingua-afrikaans-language-model = { path = "language-models/af", version = "1.0.0" }
lingua-albanian-language-model = { path = "language-models/sq", version = "1.0.0" }
lingua-arabic-language-model = { path = "language-models/ar", version = "1.0.0" }
lingua-armenian-language-model = { path = "language-models/hy", version = "1.0.0" }
lingua-azerbaijani-language-model = { path = "language-models/az", version = "1.0.0" }
lingua-basque-language-model = { path = "language-models/eu", version = "1.0.0" }
lingua-belarusian-language-model = { path = "language-models/be", version = "1.0.0" }
lingua-bengali-language-model = { path = "language-models/bn", version = "1.0.0" }
lingua-bokmal-language-model = { path = "language-models/nb", version = "1.0.0" }
lingua-bosnian-language-model = { path = "language-models/bs", version = "1.0.0" }
lingua-bulgarian-language-model = { path = "language-models/bg", version = "1.0.0" }
lingua-catalan-language-model = { path = "language-models/ca", version = "1.0.0" }
lingua-chinese-language-model = { path = "language-models/zh", version = "1.0.0" }
lingua-croatian-language-model = { path = "language-models/hr", version = "1.0.0" }
lingua-czech-language-model = { path = "language-models/cs", version = "1.0.0" }
lingua-danish-language-model = { path = "language-models/da", version = "1.0.0" }
lingua-dutch-language-model = { path = "language-models/nl", version = "1.0.0" }
lingua-english-language-model = { path = "language-models/en", version = "1.0.0" }
lingua-esperanto-language-model = { path = "language-models/eo", version = "1.0.0" }
lingua-estonian-language-model = { path = "language-models/et", version = "1.0.0" }
lingua-finnish-language-model = { path = "language-models/fi", version = "1.0.0" }
lingua-french-language-model = { path = "language-models/fr", version = "1.0.0" }
lingua-ganda-language-model = { path = "language-models/lg", version = "1.0.0" }
lingua-georgian-language-model = { path = "language-models/ka", version = "1.0.0" }
lingua-german-language-model = { path = "language-models/de", version = "1.0.0" }
lingua-greek-language-model = { path = "language-models/el", version = "1.0.0" }
lingua-gujarati-language-model = { path = "language-models/gu", version = "1.0.0" }
lingua-hebrew-language-model = { path = "language-models/he", version = "1.0.0" }
lingua-hindi-language-model = { path = "language-models/hi", version = "1.0.0" }
lingua-hungarian-language-model = { path = "language-models/hu", version = "1.0.0" }
lingua-icelandic-language-model = { path = "language-models/is", version = "1.0.0" }
lingua-indonesian-language-model = { path = "language-models/id", version = "1.0.0" }
lingua-irish-language-model = { path = "language-models/ga", version = "1.0.0" }
lingua-italian-language-model = { path = "language-models/it", version = "1.0.0" }
lingua-japanese-language-model = { path = "language-models/ja", version = "1.0.0" }
lingua-kazakh-language-model = { path = "language-models/kk", version = "1.0.0" }
lingua-korean-language-model = { path = "language-models/ko", version = "1.0.0" }
lingua-latin-language-model = { path = "language-models/la", version = "1.0.0" }
lingua-latvian-language-model = { path = "language-models/lv", version = "1.0.0" }
lingua-lithuanian-language-model = { path = "language-models/lt", version = "1.0.0" }
lingua-macedonian-language-model = { path = "language-models/mk", version = "1.0.0" }
lingua-malay-language-model = { path = "language-models/ms", version = "1.0.0" }
lingua-marathi-language-model = { path = "language-models/mr", version = "1.0.0" }
lingua-mongolian-language-model = { path = "language-models/mn", version = "1.0.0" }
lingua-nynorsk-language-model = { path = "language-models/nn", version = "1.0.0" }
lingua-persian-language-model = { path = "language-models/fa", version = "1.0.0" }
lingua-polish-language-model = { path = "language-models/pl", version = "1.0.0" }
lingua-portuguese-language-model = { path = "language-models/pt", version = "1.0.0" }
lingua-punjabi-language-model = { path = "language-models/pa", version = "1.0.0" }
lingua-romanian-language-model = { path = "language-models/ro", version = "1.0.0" }
lingua-russian-language-model = { path = "language-models/ru", version = "1.0.0" }
lingua-serbian-language-model = { path = "language-models/sr", version = "1.0.0" }
lingua-shona-language-model = { path = "language-models/sn", version = "1.0.0" }
lingua-slovak-language-model = { path = "language-models/sk", version = "1.0.0" }
lingua-slovene-language-model = { path = "language-models/sl", version = "1.0.0" }
lingua-somali-language-model = { path = "language-models/so", version = "1.0.0" }
lingua-sotho-language-model = { path = "language-models/st", version = "1.0.0" }
lingua-spanish-language-model = { path = "language-models/es", version = "1.0.0" }
lingua-swahili-language-model = { path = "language-models/sw", version = "1.0.0" }
lingua-swedish-language-model = { path = "language-models/sv", version = "1.0.0" }
lingua-tagalog-language-model = { path = "language-models/tl", version = "1.0.0" }
lingua-tamil-language-model = { path = "language-models/ta", version = "1.0.0" }
lingua-telugu-language-model = { path = "language-models/te", version = "1.0.0" }
lingua-thai-language-model = { path = "language-models/th", version = "1.0.0" }
lingua-tsonga-language-model = { path = "language-models/ts", version = "1.0.0" }
lingua-tswana-language-model = { path = "language-models/tn", version = "1.0.0" }
lingua-turkish-language-model = { path = "language-models/tr", version = "1.0.0" }
lingua-ukrainian-language-model = { path = "language-models/uk", version = "1.0.0" }
lingua-urdu-language-model = { path = "language-models/ur", version = "1.0.0" }
lingua-vietnamese-language-model = { path = "language-models/vi", version = "1.0.0" }
lingua-welsh-language-model = { path = "language-models/cy", version = "1.0.0" }
lingua-xhosa-language-model = { path = "language-models/xh", version = "1.0.0" }
lingua-yoruba-language-model = { path = "language-models/yo", version = "1.0.0" }
lingua-zulu-language-model = { path = "language-models/zu", version = "1.0.0" }

[dev-dependencies]
float-cmp = "0.8.0"
indoc = "1.0.3"
mockall = "0.8.3"
rstest = "0.6.4"
tempfile = "3.1.0"
titlecase = "1.1.0"
whatlang = "0.11.0"